--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 *{
-  margin: 0;
+  margin:0;
   padding: 0;
 }
 
-.container {
-  background: linear-gradient(to right bottom, #e1b382,#c89666);
+.container{
+  background: linear-gradient(to right bottom, #e1b382, #c89666);
   width: 100%;
   min-height: 100vh;
   display: flex;
@@ -22,7 +22,6 @@
   box-shadow: 3px 6px 40px #000;
   margin-bottom: 10px;
 }
-
 .header h1{
   color: #fff;
   text-align: center;
@@ -41,7 +40,7 @@
   border-radius: 10px;
 }
 
-.button-add{
+.button-add {
   width: 70px;
   padding: 15px 15px;
   font-size: 20px;
@@ -51,10 +50,10 @@
   cursor: pointer;
 }
 
-.list-item{
+.list-item {
   display: flex;
   margin: 20px 0;
-  border: 1px solid rgb(171, 126, 126);
+  border: 1px solid #ccc;
   border-radius: 10px;
   padding: 10px;
   max-height: 30px;
@@ -68,7 +67,7 @@
   cursor: pointer;
   background-color: transparent;
   font-size: 28px;
-  border-radius: 50%;
+  border-radius: 50px;
 }
 
 .button-complete{
@@ -76,35 +75,32 @@
   margin-right: 10px;
 }
 
-.button-edit{
+.button-edit {
   color: #e2d029;
   margin-right: 10px;
 }
-
-.button-delete{
-  color:lightseagreen
+.button-delete {
+color: lightseagreen;
 }
 
-.complete{
-  text-decoration-style: solid;
-  text-decoration-line: line-through;
+.complete {
+  text-decoration-style:solid ;
+  text-decoration-line:line-through ;
   text-decoration-color: #ff6c6c;
   opacity: 0.6;
 }
 
-.list{
+.list {
   width: 220px;
-  border-color: #12343b;
+  background-color: #12343b;
   border: none;
-  color:#ccc ;
+  color: #ccc;
   font-size: 20px;
   padding-left: 10px;
-  margin-right: 15px;
+  margin-left: 15px;
 }
 
 input:focus,
-button:focus{
+button:focus {
   outline: none;
-  
 }
-
